# cpython

./: .gitignore  CMakeLists.txt  build.py  builtin.c  conanfile.py  project.conf
Android/: config.c  pyconfig.h
IOS/: config.c  pyconfig.h
Mac/: config.c  pyconfig.h
Modules/: posixmodule.c
Modules/_ctypes/libffi_dummy/: ffi.h  ffi_dummy.c
Modules/_io/: fileio.c  textio.c
Modules/expat/: xmlparse.c  xmltok.c
PC/: msvcrtmodule.c  pyconfig.h
Python/: bltinmodule.c  fileutils.c  import.c
scripts/: build-android.bat  build-headers.bat  build-headers.sh  build-ios.sh  build-macos.sh  build-pc.bat  build.bat
test_package/: conanfile.py  example.cpp
